<resources>
    <string name="app_name">Autodrive</string>

    <!--<string name="hello_world">Hello world!</string>-->
    <string name="action_settings">Settings</string>
    <!--
        <string name="edit_message">Enter a message</string>
        <string name="button_send">Send</string>
    -->
    <string name="title_activity_display_message">My Message</string>
    <string name="action_search"></string>
    <string name="title_activity_maps">Map</string>
    <!--
        <string name="button_maps">Map</string>
    -->

    <string name="button_drive_mode">Drive modes</string>
    <string name="button_help">Help</string>
    <string name="button_car_connect">Car connect</string>

    <string name="hello_world">Hello world!</string>

    <string name="button_map_mode">Map Navigation</string>
    <string name="button_free_run">Free Run</string>
    <string name="title_activity_drive_modes">Drive Modes</string>
    <string name="title_activity_free_run">Free Run</string>

    <string name="button_start">Start</string>
    <string name="button_monitor">Monitor</string>
    <string name="button_pause">Pause</string>
    <string name="button_stop">Stop</string>

    <string name="toggle_turn_on">Stop</string>
    <string name="toggle_turn_off">Run</string>

    <string name="label_speed">Set speed</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>

    <string name="text_bluetooth_off">Bluetooth is Off</string>
    <string name="text_bluetooth_on">Bluetooth is On</string>

    <string name="text_enable">Enable</string>
    <string name="text_disable">Disable</string>

    <string name="text_view_paired">Paired Devices</string>
    <string name="text_scan_devices">Scan Devices</string>
    <string name="text_stop_scan">Scan Devices</string>

    <string name="text_list_paired_devices">Paired Devices</string>
    <string name="text_list_devices">List of Devices</string>

    <string name="text_pair">Pair</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="title_activity_device_list_adapter">DeviceListAdapter</string>

    <string name="none_paired">No devices have been paired</string>

    <string name="label_latitude">Lat </string>
    <string name="label_longitude">Long</string>
    <string name="title_activity_maps1">Map</string>
    <!--
    <string name="hello_world">Hello world!</string>
-->

</resources>
