<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context=".FreeRunActivity">

    <LinearLayout
        android:id="@+id/inputpane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:text="Paired Devices"
            android:id="@+id/info"
            android:textStyle="bold|italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ListView
            android:id="@+id/pairedlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />

        <RelativeLayout
            android:id="@+id/dashboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/latitude"
                android:layout_width="100pt"
                android:layout_height="30pt"
                android:textSize="25dp"
                android:text="@string/label_latitude"/>

            <EditText
                android:id="@+id/latinput"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/latitude"
                />

            <TextView
                android:id="@+id/longitude"
                android:layout_width="100pt"
                android:layout_height="30pt"
                android:textSize="25dp"
                android:layout_below="@+id/latitude"
                android:text="@string/label_longitude"/>

            <EditText
                android:id="@+id/loninput"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/latinput"
                android:layout_toRightOf="@+id/longitude"
                />

            <Button
                android:textAllCaps="false"
                android:id="@+id/monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_below="@+id/car_start"
                android:text="@string/button_monitor"
                android:layout_marginBottom="30dp"
                />

            <!--Button for Free Run mode -->

            <ImageButton
                android:id="@+id/car_start"
                android:contentDescription="@string/button_start"
                android:scaleType="fitXY"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="30dp"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_below="@+id/longitude"
                android:layout_alignParentLeft="true"
                android:src="@drawable/start"
                android:background="#00000000"
                />

            <ImageButton
                android:id="@+id/car_pause"
                android:contentDescription="@string/button_pause"
                android:scaleType="fitXY"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_below="@+id/longitude"
                android:layout_centerInParent="true"
                android:src="@drawable/pause"
                android:background="#00000000"
                />


            <ImageButton
                android:id="@+id/car_stop"
                android:contentDescription="@string/button_stop"
                android:scaleType="fitXY"
                android:layout_marginRight="10dp"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_below="@+id/longitude"
                android:layout_alignParentRight="true"
                android:src="@drawable/stop"
                android:background="#00000000"
                />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
