<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <!--Button for establishing connection to the Car-->
    <Button
        android:id="@+id/car_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_car_connect"
        android:onClick="openCarConnect"/>


    <!--Button for Drive mode -->
    <Button
        android:id="@+id/drive_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/car_connect"
        android:text="@string/button_drive_mode"
        android:onClick="openDriveModes"/>

    <!--Button for App usage guide-->
    <Button
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drive_mode"
        android:text="@string/button_help"
        android:onClick="openHelp"/>



    <!--<TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />-->
    <!--   <EditText
           android:id="@+id/edit_message"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/edit_message"
           />

       <Button
           android:layout_width="96dp"
           android:layout_height="wrap_content"
           android:layout_below="@id/edit_message"
           android:layout_alignParentLeft="true"
           android:text="@string/button_send"
           android:onClick="sendMessage"/>

       <Button
           android:layout_width="96dp"
           android:layout_height="wrap_content"
           android:layout_below="@id/edit_message"
           android:layout_alignParentRight="true"
           android:text="@string/button_maps"
           android:onClick="openMaps"/>
    -->
</RelativeLayout>
